--- a/config/config.env.example
+++ b/config/config.env.example
@@ -2,3 +2,4 @@ NODE_ENV=development
 PORT=5000
 MONGO_URI=mongodb://localhost/journal-dev
 JWT_KEY=kutyajobbmintmacska
+REDIS_URL=redis://localhost:6379
