--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
+    "mongoose-redis-caching": "^1.11.5",
     "morgan": "^1.10.0",
     "validator": "^13.0.0"
   },
